Documentados en L5-Swagger método GET general de todas las entidades
