# app/Http/Resources/ClienteResource.php
@@ -8,9 +8,21 @@ use Illuminate\Http\Resources\Json\JsonResource;
 class ClienteResource extends JsonResource
 {
     /**
-     * Transform the resource into an array.
-     *
-     * @return array<string, mixed>
+     * @OA\Get(
+     *      tags={"clientes"},
+     *      path="/rest/clientes",
+     *      summary="Devuelve todos los clientes",
+     *      description="Devuelve todos los clientes registrados en el sistema",
+     *      @OA\Response(
+     *          response="200",
+     *          description="Operación realizada con éxito",
+     *          @OA\JsonContent(ref="#/components/schemas/Cliente")
+     *      ),
+     *      @OA\Response(
+     *          response="default",
+     *          description="Error inesperado"
+     *      )
+     * )
      */
     public function toArray(Request $request): array
     {
